# sm_motion_photo

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
benches/: find-index.rs  find-video-context.rs  find-video-duration.rs
src/: lib.rs
tests/: lib.rs
tests/data/: photo-sg22-ultra.heic
