[package]
name = "sm_motion_photo"
version = "0.1.3"
authors = ["Vitaliy Velikodniy <vitaliy@velikodniy.name>"]
edition = "2018"
repository = "https://github.com/g0ddest/sm_motion_photo"
description = "Extract video from Samsung Motion Photo. Supports JPEG, HEIC"
keywords = ["motion-photo"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
boyer-moore-magiclen = "0.2.4"
mp4parse = "0.11.4"