[package]
name = "sm_motion_photo"
version = "0.1.5"
authors = ["Vitaliy Velikodniy <vitaliy@velikodniy.name>"]
edition = "2018"
repository = "https://github.com/g0ddest/sm_motion_photo"
description = "Extract video from Samsung Motion Photo. Supports JPEG, HEIF/HEIC"
keywords = ["motion-photo", "heic", "heif", "jpeg", "samsung-motion-photo"]
readme = "README.md"
license = "MIT"
exclude = [
    "tests/*",
]

[dependencies]
memmap = "0.7.0"
boyer-moore-magiclen = "0.2.11"
mp4parse = "=0.11.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "find-index"
harness = false

[[bench]]
name = "find-video-context"
harness = false

[[bench]]
name = "find-video-duration"
harness = false
